@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2017-01-13
+GNU mailutils NEWS -- history of user-visible changes. 2017-01-16
 Copyright (C) 2002-2017 Free Software Foundation, Inc.
 See the end of file for copying conditions.
 
@@ -39,6 +39,9 @@ obvious reasons, the interactive mode is suppressed in this case.
 
 The `--attach-fd' option is useful when calling `mail' from another
 program.
+
+The new option `--skip-empty-attachments' instructs `mail' to omit
+attachments that have zero-size body.
 
 Example:
 
